test_suite/tests/ui/default-attribute/enum_path.stderr
error: #[serde(default = "...")] can only be used on structs with named fields
 --> tests/ui/default-attribute/enum_path.rs:5:1
  |
3 | #[derive(Deserialize)]
  |          ----------- in this derive macro expansion
4 | #[serde(default = "default_e")]
5 | enum E {
  | ^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
